fix: Footer, LocaleSelector layout issues

--- a/app/src/ui/pulse/sidebar/PulseSidebar.module.scss
+++ b/app/src/ui/pulse/sidebar/PulseSidebar.module.scss
@@ -56,7 +56,6 @@
 
   &__content {
     display: flex;
-    flex: 1 1 0;
     flex-direction: column;
     margin-bottom: auto;
     overflow-x: hidden;
